wip demo events

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,7 +32,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions align="end">
-        <button mat-raised-button color="primary" routerLink="demo" data-cy="demoBtn">
+        <button mat-raised-button color="primary" routerLink="/demo" data-cy="demoBtn">
             <mat-icon inline=true>preview</mat-icon>
             DEMO
         </button>
