--- a/src/app/demo-event/demo-event.component.html
+++ b/src/app/demo-event/demo-event.component.html
@@ -293,6 +293,6 @@
             <span matBadge="#" matBadgeColor="warn" [matBadgeHidden]="!isUnreadMessage"
                 data-cy="messagesTabTitle">Messages</span>
         </ng-template>
-        <app-messages eventId="demo"></app-messages>
+        <app-demo-messages></app-demo-messages>
     </mat-tab>
 </mat-tab-group>
